tests/ui/type-alias-impl-trait/type-alias-impl-trait-with-cycle-error.stderr
error: unconstrained opaque type
  --> $DIR/type-alias-impl-trait-with-cycle-error.rs:3:12
   |
LL | type Foo = impl Fn() -> Foo;
   |            ^^^^^^^^^^^^^^^^
   |
   = note: `Foo` must be used in combination with a concrete type within the same module

error: aborting due to previous error

