tests/ui/type-alias-impl-trait/type-alias-impl-trait-with-cycle-error.rs
#![feature(type_alias_impl_trait)]

type Foo = impl Fn() -> Foo;

fn crash(x: Foo) -> Foo {
    //~^ ERROR: overflow
    x
}

fn main() {}
